# NatNetSDKCrossplatform

./: CMakeLists.txt  README.md  package.xml
include/: natnet_multicast.h  packet_client_helper.h
msg/: PointArray.msg  PointVelocityStamped.msg
src/: PacketClientHelper.cpp  multicast_receiver.cpp  natnet_multicast.cpp  nn_multicast_node.cpp  packet_client_helper.cpp
